# jxrlib-static

./: CMakeLists.txt  jxrlib.pc.in
.github/workflows/: cmake-multi-platform.yml
